Fix unclickable name caused by type tags covering the name
- CSS for filters below the search input
- Fix unclickable name caused by type tags covering the name

--- a/web/static/scss/partials/_cn-search.scss
+++ b/web/static/scss/partials/_cn-search.scss
@@ -29,9 +29,19 @@
         &-group
         {
             margin-bottom: 0;
+
+            select.form-control,
+            select.custom-select
+            {
+                border-radius: 50px;
+                padding: 0 20px;
+
+                height: 50px;
+            }
         }
 
-        &-control
+        &-control,
+        .custom-select
         {
             font-size: 20px;
             font-weight: normal;
